Field/TranslationPicker [FIX] Z-index bug

--- a/scss/core/elements/_input.translations.scss
+++ b/scss/core/elements/_input.translations.scss
@@ -41,7 +41,7 @@
 
 			.dropdown.open {
 				.input {
-					z-index: 3;
+					z-index: luiTheme(element, field, popover, z-index) + 1;
 				}
 			}
 		}
